# Graph-Contextual-Audience

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  clustering.py  config.py  data_loader.py  docker-compose.yml  pyproject.toml  query.py  requirements.txt  streamlit_app.py
exploration/: Audience_Targeting_Desc_Proposal.md  app.py  embedder.py  enrichment.py  evaluate.py  graph_builder.py  iab-categories-interactive.tsx  poc.md  visualize.py
notebooks/: 01_exploration.ipynb  02_embedding_clustering.ipynb  03_graph_search.ipynb
src/audience_targeting/: __init__.py  api.py  api_models.py  build_pipeline.py  clustering.py  data_loader.py  embedder.py  enrichment.py  logging_config.py  models.py  qdrant_store.py  relationships.py  retry.py  search_engine.py  settings.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_embedder.py  test_evaluation.py  test_match_thresholds.py  test_relationships.py  test_search_engine.py
