[project]
name = "audience-targeting"
version = "2.0.0"
description = "AI-powered cross-platform audience targeting using embeddings + Qdrant vector database"
requires-python = ">=3.10"

dependencies = [
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
build = [
    "hdbscan>=0.8.33",
    "networkx>=3.1",
    "node2vec>=0.4.6",
    "openai>=1.0.0",
    "umap-learn>=0.5.3",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "audience-targeting[serve,build]",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "plotly>=5.15",
    "matplotlib>=3.7",
    "pyvis>=0.3.2",
    "streamlit>=1.28.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running Qdrant instance with populated data",
]
